2013-09-13  Romain Francois <romain@r-enthusiasts.com>

        * DESCRIPTION : require Rcpp 0.10.4.4
        * include/RcppArmadilloForward.h : declaration of specializations of
	InputParameter for references and const reference to arma::Mat
        * include/RcppArmadilloAs.h : definitions of the above

2013-08-24  Romain Francois <romain@r-enthusiasts.com>

        * include/RcppArmadilloExtensions/sample.h: added include guard, made
	functions SampleReplace, etc ... templates to avoid the multiple
	definitions problem

2013-08-21  Romain Francois <romain@r-enthusiasts.com>

        * include/RcppArmadilloWrap.h: Less data copies for wrap< SpMat<T> >
        * include/RcppArmadilloAs.h:   Less data copies for as< SpMat<T> >

2013-08-20  Romain Francois <romain@r-enthusiasts.com>

        * include/RcppArmadilloWrap.h: Handle wrap<subview>
        * include/RcppArmadilloWrap.h: cleaner implementation for wrap< SpMat<T> >
        * include/RcppArmadilloAs.h: cleaner implementation for as< SpMat<T> >

2013-08-17  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppArmadillo-intro.Rnw: Converted from LaTeX minted
	(which farms out to Python's pygmentize) to LaTeX listings (which is
	plainer, but works on CRAN)
	* DESCRIPTION: Remove 'BuildVignettes: FALSE'

2013-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.910.0
	* inst/NEWS: Release 0.3.910.0
	* inst/include/*: Upgraded to new release 3.910.0 of Armadillo
        * debian/*: Similarly updated for new release to Debian

	* vignettes/*: Moved files from inst/doc per new CRAN standards
	* DESCRIPTION: Set 'BuildVignettes: FALSE' as LaTeX minted mode
	creates issues for the CRAN builders
	* inst/doc/*: Include pre-built vignettes

2013-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppArmadilloExtensions/spmat.h: Added basic as<> and
	wrap support for sparse matrices (of class dgCMatrix from the Matrix
	package); currently only type double is supported
